     (Angel Carpintero)
   * motion_locate new parameter names : red , center , redcross  instead of only on, off. (Angel Carpintero)

Bugfixes
   * Fix Problem Encoding 1280x1024 resolution videos
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x06x11x183727 (Angel Carpintero)

 

3.2.10.1 Summary of Changes

Bugfixes
    * Fix a security issue in web control interface http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=484572
      (Angel Carpintero)

3.2.10 Summary of Changes

Features
   * Added the pre_capture buffer redesign to throttle load and enhance pre_capture feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreCaptureRedesign (Dag Erlandsson).
   * Added preview center feature.
     http://www.lavrsen.dk/twiki/bin/view/Motion/PreviewCenter (Dag Erlandsson).	
   * Removed low_cpu feature, as it is not really compatible with pre_capture and a lot of other
     features rely on the pre_capture buffer behind the scenes. (Joerg Weber)
   * Removed night_compensate feature. This functionality is covered by noise_tune. (Joerg Weber)
   * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
   * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)
   * Added area_detect feature. New config options: area_detect, on_area_detected. (Joerg Weber)
   * Added help in http control 
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x11x19x181541 (Angel Carpintero)
   * Added Choose V4L2 palette http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x11x19x032318
     (Angel Carpintero)  
   * Improved http control ( 'back' link, select box, show current values when are going to be changed ). 
     (Angel Carpintero)
   * Improved thread handling, single threads can be stopped/restarted (Dag Erlandsson)
   * Watchdog, restart hang threads (Dag Erlandsson)
   * Added ON_CAMERA_LOST event (Dag Erlandsson)