@@ -225,6 +225,11 @@ Values: Max 4095 characters / Default: %v-%Y%m%d%H%M%S
 .br
 File path for motion triggered ffmpeg movies relative to target_dir. This was previously called ffmpeg_filename.
 .TP
+.B netcam_broken boolean
+Values: on, off / Default: off
+.br
+Set less strict jpeg checks for network cameras with a poor/buggy firmware.
+.TP
 .B netcam_keepalive discrete string
 Values: off , force, on / Default: off
 .br
